fix: devWeb - align items on navbar

--- a/S2/DevWeb/Projet/src/main/webapp/static/css/navbar.css
+++ b/S2/DevWeb/Projet/src/main/webapp/static/css/navbar.css
@@ -8,8 +8,13 @@ nav {
     display: flex;
     flex-direction: row;
     gap: 40px;
+    align-items: center;
 }
 
-p.user{
+p.user {
     padding:10px;
+}
+
+a {
+    align-self: center;
 }
